@@ -23,6 +23,7 @@ Deprecated
 * ``sphinx.ext.autodoc.SlotsAttributeDocumenter``
 * ``sphinx.ext.autodoc.TypeVarDocumenter``
 * ``sphinx.ext.autodoc.importer._getannotations()``
+* ``sphinx.ext.autodoc.importer._getmro()``
 * ``sphinx.pycode.ModuleAnalyzer.parse()``
 * ``sphinx.util.osutil.movefile()``
 * ``sphinx.util.requests.is_ssl_error()``
